feat(tim): map regions to geodesic geometry with component indexes
Preserve source-region order, emit geometryIndex, and build WGS84 geodesic circles so consumers can correlate region metadata with Multi* and GeometryCollection components.

Co-authored-by: Cursor <cursoragent@cursor.com>